<resources>
    <string name="app_name">JeevanAdhara</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_book_now">Book Now</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_deposites">Deposits</string>
    <string name="menu_wallets">Wallets</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_refer_and_arn">Refer</string>
    <string name="menu_support">Support</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="registerText">Glad to see you to</string>
    <string name="app_name_small">JeevanaAdhara</string>
    <string name="slogan">Water Service at your Door Steps</string>
    <string name="otp_login">OTP Sign In</string>
    <string name="hint_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="hint_otp">OTP</string>
    <string name="hint_password">Password</string>
    <string name="loginText">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_signIn">Sign In</string>
    <string name="hint_name">Full Name</string>
    <string name="pincode">Pincode</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_referral_code">Referral Code (Optional)</string>
    <string name="terms_and_conditions">By signing up you are agree to our Terms &amp; Conditions.</string>
    <string name="already_have_account">Already have account? </string>
    <string name="send">Send</string>
    <string name="app_welcome">Welcome Back!</string>
    <string name="signInText">Sign in to continue to</string>
    <string name="main_wallet_amount_cannot_be_more_than_rs_10000">Main Wallet balance cannot be more than ₹ 10000</string>

    <string name="enter_mobile_number">Enter Mobile Number \n for OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_order_address">OrderAddressActivity</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="submit_otp">Submit Otp</string>
    <string name="Enter_otp">Enter Otp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch_name">Branch name</string>
    <string name="bank_name">Bank Name</string>
    <string name="submit">Submit</string>
    <string name="please_enter_valid_number">Please enter valid number</string>
    <string name="please_enter_value">Please enter value</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_driver_maps">DriverMapsActivity</string>


</resources>