<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book_now"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_book_now" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_my_order" />


        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_accounts" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_wallets" />

        <item
            android:id="@+id/nav_refer_earn"
            android:icon="@drawable/ic_share"
                android:title="@string/menu_refer_and_arn" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/menu_support" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>