<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context=".signin.SignInActivity"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size20"
            android:layout_marginBottom="@dimen/size10"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_welcome"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size30" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:text="@string/signInText"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize30" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size5"
                android:text="@string/app_name_small"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize30" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size40"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/input_layout_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:counterEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_number"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="10"
                        android:imeOptions="actionNext"

                        android:textSize="@dimen/textsize14" />


                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/size10"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/textsize14" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="@dimen/size5"
                    android:paddingBottom="@dimen/size10"
                    android:text="@string/forgot_password"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize14"
                    tools:ignore="HardcodedText" />




                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginTop="@dimen/margin_25"
                    android:gravity="center"
                    android:background="@drawable/border_gradient"
                    android:text="@string/loginText"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize16" />


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size10"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/size10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account"
                        android:textColor="#4a4a4a"
                        android:textSize="@dimen/textsize14" />

                    <TextView
                        android:id="@+id/tvSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size5"
                        android:text="@string/text_signUp"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/size30"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textsize14" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>