<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/atserveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerText"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize30" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size2"
                android:text="@string/app_name_small"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edFullName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="@dimen/textsize14" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/textsize14" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edMobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_number"
                        android:imeOptions="actionNext"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="10"
                        android:textSize="@dimen/textsize14" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="@dimen/textsize14" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edReferal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_referral_code"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:textSize="@dimen/textsize14" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/text_verify"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginTop="@dimen/size20"
                    android:background="@drawable/border_gradient"
                    android:gravity="center"
                    android:text="@string/verify_mobile"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize16"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:id="@+id/verifyOtpLinera"
                    android:visibility="gone"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edOtp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Enter_otp"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:textSize="@dimen/textsize14" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_submitOtp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginTop="@dimen/size20"
                    android:background="@drawable/border_gradient"
                    android:gravity="center"
                    android:text="@string/submit_otp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize16"
                    android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textSize="@dimen/textsize14" />

                    <TextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size2"
                        android:text="@string/text_signIn"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textsize14"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>